Fixed the weird skid z-indexing issues on Chasm

--- a/public/css/single.less
+++ b/public/css/single.less
@@ -6,7 +6,6 @@
   color: #8fcf4b;
 }
 
-
 .laps {
   color: white;
   text-align: center;
@@ -31,14 +30,13 @@
 
 }
 
-
 .ghost {
   position: absolute;
   height: 15px;
   width: 15px;
   transform-style: preserve-3d;
   opacity: .5;
-  z-index: 1;
+  z-index: 3;
 
   .body {
 
