--- a/public/css/style.less
+++ b/public/css/style.less
@@ -76,6 +76,9 @@ canvas.track-source {
 .skids {
   display: block;
   position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
   // width: 600px;
   // height: 300px;
   // display: none;
@@ -709,9 +712,7 @@ nav {
   width: 15px;
   box-sizing: content-box;
 
-
   .line {
-
     position: absolute;
     width: 100%;
     height: 100%;
